# btcticker

./: .codecrate.toml  .gitignore  .pre-commit-config.yaml  .ruff.toml  README.md  pyproject.toml  setup.py
.github/workflows/: codecov.yml
btcticker/: __init__.py  chart.py  cli.py  config.py  font_sources.py  mempool.py  ticker.py
btcticker/domain/: __init__.py  market_snapshot.py  price_history.py  price_snapshot.py
btcticker/layouts/: __init__.py  all_layout.py  big_one_row_layout.py  big_two_rows_layout.py  common.py  fiat_height_layout.py  fiat_layout.py  mempool_layout.py  ohlc_layout.py  one_number_layout.py
btcticker/providers/: __init__.py  _pyccxt_compat.py  base.py  btcpriceticker_provider.py  pyccxt_provider.py
btcticker/render/: __init__.py  image_renderer.py
tests/: test_cli_unit.py  test_config_unit.py  test_font_sources_unit.py  test_image_renderer_unit.py  test_mempool_unit.py  test_providers_unit.py  test_ticker_unit.py
