[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["btcticker"]

[project]
name = "btcticker"
authors = [
  { name="Holger Nahrstaedt", email="nahrstaedt@gmail.com" },
]
description = "Creates PNG images with the current Bitcoin price and other information. Based on Pillow."
keywords = ["Pillow", "png", "PIL"]
urls = { Homepage = "https://github.com/holgern/btcticker" }
readme = "README.md"
requires-python = ">3.8.0"
dependencies = [
    "piltext",
    "pymempool",
    "pyccxt",
    "rich",
    "typer"
]
license = {file = "LICENSE"}
classifiers=[
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Topic :: Software Development :: Libraries',
]

dynamic=["version"]

[project.scripts]
btcticker = "btcticker.cli:main"

[tool.setuptools_scm]
write_to = "btcticker/_version.py"

[tool.tox]
legacy_tox_ini = """

[testenv]
deps =
    pytest
    pytest-cov[all]
commands =
    pytest
"""

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
exclude = [
]

[[tool.mypy.overrides]]
module = [
    "mplfinance",
    "piltext",
    "piltext.*",
    "pyccxt",
    "pyccxt.*",
    "pymempool",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "btcticker.ticker",
    "btcticker.cli",
    "btcticker.render.image_renderer",
]
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = [
    "btcticker.layouts.*",
    "btcticker.providers.pyccxt_provider",
]
disallow_untyped_defs = false
disallow_incomplete_defs = false
